--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@fortawesome/pro-regular-svg-icons": "^6.1.1",
     "@fortawesome/pro-solid-svg-icons": "^6.1.1",
     "@fortawesome/react-native-fontawesome": "^0.3.0",
+    "@gilder/gql-client": "^1.0.13",
+    "@gilder/types": "^1.0.4",
     "@gorhom/bottom-sheet": "^4.4.3",
     "@project-serum/anchor": "^0.24.2",
     "@react-native-async-storage/async-storage": "~1.17.3",
@@ -49,6 +51,7 @@
     "axios": "^0.26.1",
     "babel-plugin-inline-dotenv": "^1.7.0",
     "big-integer": "^1.6.51",
+    "bn.js": "^5.2.1",
     "bs58": "^5.0.0",
     "buffer": "^6.0.3",
     "date-fns": "^2.28.0",
