--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
     "expo": "^46.0.10",
     "expo-application": "~4.2.2",
     "expo-asset": "~8.6.1",
-    "expo-av": "~12.0.3",
+    "expo-av": "12.0.4",
     "expo-barcode-scanner": "~11.4.0",
     "expo-clipboard": "~3.1.0",
     "expo-constants": "~13.2.4",
@@ -75,7 +75,7 @@
     "expo-notifications": "^0.16.1",
     "expo-secure-store": "~11.3.0",
     "expo-sharing": "~10.3.0",
-    "expo-splash-screen": "~0.16.1",
+    "expo-splash-screen": "0.16.2",
     "expo-standard-web-crypto": "^1.4.0",
     "expo-status-bar": "~1.4.0",
     "expo-updates": "^0.14.3",
@@ -90,7 +90,7 @@
     "react-devtools": "^4.22.1",
     "react-devtools-core": "^4.23.0",
     "react-dom": "18.0.0",
-    "react-native": "0.69.5",
+    "react-native": "0.69.6",
     "react-native-gesture-handler": "~2.5.0",
     "react-native-get-random-values": "~1.8.0",
     "react-native-hyperlink": "^0.0.19",
