--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "graphql-request": "^5.0.0",
     "lodash": "^4.17.21",
     "lottie-react-native": "5.1.4",
+    "mixpanel-react-native": "^2.1.0",
     "numeral": "^2.0.6",
     "react": "18.1.0",
     "react-devtools": "^4.22.1",
