--- a/package.json
+++ b/package.json
@@ -36,11 +36,11 @@
     "@react-navigation/native-stack": "^6.7.0",
     "@reduxjs/toolkit": "^1.7.1",
     "@sentry/react-native": "4.2.2",
+    "@solana-mobile/mobile-wallet-adapter-protocol": "^0.9.9",
     "@solana/pay": "^0.2.4",
     "@solana/spl-governance": "^0.3.15",
     "@solana/spl-token": "^0.3.5",
     "@solana/spl-token-registry": "^0.2.4574",
-    "@solana/wallet-adapter-base": "^0.9.16",
     "@solana/web3.js": "^1.66.2",
     "@toruslabs/openlogin": "^2.3.0",
     "@toruslabs/openlogin-ed25519": "^2.0.0",
@@ -110,6 +110,7 @@
     "sentry-expo": "~5.0.0",
     "stream-chat-expo": "^4.14.0",
     "styled-components": "^5.3.3",
+    "swr": "^2.0.0",
     "text-encoding-polyfill": "^0.6.7",
     "tweetnacl": "^1.0.3"
   },
